<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
        <TextView
            android:id="@+id/sign"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sign_in"
            android:textColor="#003399"
            android:textSize="40sp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp" />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/welcome"
           android:layout_below="@+id/sign"
           android:layout_marginLeft="50dp"
           android:layout_marginTop="18dp"
           android:textSize="25sp"
           android:layout_marginStart="50dp" />
        <EditText
            android:id="@+id/sign_in"
            android:layout_marginTop="180dp"
            android:layout_height="30dp"
            android:layout_width="270dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shape"
            android:drawableLeft="@drawable/ic_user"
            android:hint="@string/hint_1"
            android:maxLength="10"
            android:singleLine="true"
            android:textSize="10sp"
            android:drawableStart="@drawable/ic_user" />
    <EditText
        android:id="@+id/password"
        android:layout_marginTop="230dp"
        android:layout_height="30dp"
        android:layout_width="270dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape"
        android:drawableLeft="@drawable/ic_password"
        android:shape="rectangle"
        android:hint="@string/hint_2"
        android:maxLength="18"
        android:singleLine="true"
        android:textSize="10sp"
        android:drawableStart="@drawable/ic_password"
        android:inputType="textPassword"
         />
    <TextView
        android:id="@+id/reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password"
        android:layout_marginTop="10dp"
        android:textColor="#003399"
        android:clickable="true"
        android:focusable="true" />

    <Button
        android:id="@+id/but1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/but1"
        android:textSize="30sp"
        android:background="@drawable/login_button_selector"
        />
    <ImageView
        android:id="@+id/sina"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/account_sina"
        android:layout_below="@+id/but1"
        android:layout_marginTop="80dp"
        android:layout_toLeftOf="@id/but1"
        android:layout_marginRight="-50dp"
        android:layout_toStartOf="@id/but1"
        android:layout_marginEnd="-50dp" />

    <TextView
        android:id="@+id/sina_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sina"
        android:text="@string/sina"
        android:textColor="#003399"
        android:textSize="13sp"
        android:layout_toLeftOf="@+id/but1"
        android:layout_marginRight="-55dp"
        android:layout_toStartOf="@+id/but1"
        android:layout_marginEnd="-55dp"
        android:clickable="true"
        android:focusable="true"/>
    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/account_tencent"
        android:layout_below="@id/but1"
        android:id="@+id/tencent"
        android:layout_toRightOf="@+id/but1"
        android:layout_marginLeft="-50dp"
        android:layout_toEndOf="@+id/but1"
        android:layout_marginStart="-50dp"
         />
    <TextView
        android:id="@+id/tencent_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tencent"
        android:text="@string/tencent"
        android:textColor="#003399"
        android:textSize="13sp"
        android:layout_toRightOf="@id/but1"
        android:layout_marginLeft="-55dp"
        android:layout_toEndOf="@id/but1"
        android:layout_marginStart="-55dp"
        android:clickable="true"
        android:focusable="true"/>



</RelativeLayout>